[project]
name = "mn-server-dashboard"
version = "0.1.0"
description = ""
authors = [
    {name = "Sam",email = "dodobird181@gmail.com"}
]
license = {text = "The Unlicense (See LICENSE file)"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blessed (>=1.22.0,<2.0.0)",
    "dashing (>=0.1.0,<0.2.0)",
    "mcrcon (>=0.7.0,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
