[project]
name = "mn-server-dashboard"
version = "0.1.0"
description = ""
authors = [
    {name = "Sam",email = "dodobird181@gmail.com"}
]
license = {text = "The Unlicense (See LICENSE file)"}
readme = "README.md"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
blessed = "^1.23.0"
dashing = "^0.1.0"
mcrcon = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
