[project]
name = "mn-srrver-dashboard"
requires-python = ">=3.7"
version = "0.1.0"
description = "MN Server Dashboard"
license = "See the UNLICENSE"
readme = "README.md"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.7"
blessed = "^1.23.0"
dashing = "^0.1.0"
mcrcon = "^0.7.0"
python-decouple = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
